Fix community details description wrapping again

--- a/src/routes/CommunityDetail/CommunityDetail.scss
+++ b/src/routes/CommunityDetail/CommunityDetail.scss
@@ -47,7 +47,7 @@
 .communityDescription {
   color: $color-regent;
   font-size: 16px;
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .communityTopics {
